--- a/app/src/main/res/layout/activity_home_seller.xml
+++ b/app/src/main/res/layout/activity_home_seller.xml
@@ -72,7 +72,7 @@
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
         <ImageButton
-            android:id="@+id/orders_button"
+            android:id="@+id/my_orders"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -84,7 +84,7 @@
             app:layout_constraintStart_toEndOf="@+id/home_button"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
-        <ImageButton
+        <!--<ImageButton
             android:id="@+id/my_orders_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/menu_back"
             app:layout_constraintEnd_toStartOf="@+id/account_button"
             app:layout_constraintStart_toEndOf="@+id/orders_button"
-            app:layout_constraintTop_toTopOf="@+id/menu_back" />
+            app:layout_constraintTop_toTopOf="@+id/menu_back" /> -->
 
         <ImageButton
             android:id="@+id/account_button"
