--- a/app/src/main/res/layout/card2.xml
+++ b/app/src/main/res/layout/card2.xml
@@ -32,44 +32,18 @@
                     android:layout_marginTop="13dp"
                     android:layout_marginEnd="228dp"
                     android:layout_marginBottom="38dp"
-                    android:text="Product"
+                    android:text="Store"
                     android:textColor="@color/endColor"
                     android:textFontWeight="1000"
                     android:textSize="21dp" />
 
-                <TextView
-                    android:id="@+id/store_name"
-                    android:layout_width="102dp"
-                    android:layout_height="58dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="195dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="105dp"
-                    android:layout_marginBottom="28dp"
-                    android:text="@string/store_name"
-                    android:textColor="@color/endColor"
-                    android:textFontWeight="1000"
-                    android:textSize="16dp" />
-
-                <TextView
-                    android:id="@+id/price"
-                    android:layout_width="75dp"
-                    android:layout_height="65dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="319dp"
-                    android:layout_marginTop="17dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="19dp"
-                    android:text="@string/price"
-                    android:textColor="@color/endColor"
-                    android:textFontWeight="1000"
-                    android:textSize="16dp" />
+                <Button
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:text="go"
+                    android:layout_marginStart="300dp"
+                    android:id="@+id/go_to_store_button"
+                    />
 
 
             </RelativeLayout>
