--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -11,6 +11,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp">
             <RelativeLayout
@@ -32,17 +33,23 @@
                     android:layout_width="75dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:text="Delete"/>
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/endColor"
+                    android:text="Delete"
+                    android:textColor="@color/white" />
 
                 <Button
                     android:id="@+id/edit_button"
                     android:layout_width="75dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="151dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginStart="122dp"
                     android:layout_marginEnd="14dp"
                     android:layout_toStartOf="@+id/delete_button"
                     android:layout_toEndOf="@+id/name"
-                    android:text="edit" />
+                    android:background="@color/endColor"
+                    android:text="edit"
+                    android:textColor="@color/white" />
 
 
             </RelativeLayout>
